# lfr-local

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs
src/core/: config.rs  env.rs  mod.rs  resolver.rs
src/utils/: archive.rs  download.rs  mod.rs  process.rs
