[package]
name = "lfr-local"
version = "0.1.0"
authors = ["Peter Richards"]
edition = "2021"
description = "CLI tool for managing local side-by-side Liferay environments."
readme = "README.md"
repository = "https://github.com/peterrichards-lr/lfr-local"
license = "MIT" # Or your preferred license

[dependencies]
# CLI Argument parsing
clap = { version = "4.4", features = ["derive"] }

# Environment & Path handling
walkdir = "2.4"
fs_extra = "1.3"
anyhow = "1.0" # Robust error handling for CLI tools

# Configuration parsing
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking (for API discovery/Docker Hub)
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Archive & Compression
tar = "0.4"
flate2 = "1.0" # Gzip support

# Utilities
chrono = "0.4" # For timestamping backups/logs
dialoguer = "0.11" # For interactive prompts
edit-xml = "0.1"
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3"