[package]
name = "lfr-local"
version = "1.0.0"
authors = ["Peter Richards"]
edition = "2021"
description = "Liferay Local Instance Manager - CLI tool for managing local side-by-side Liferay environments."
readme = "README.md"
repository = "https://github.com/peterrichards-lr/lfr-local"
license = "MIT"

[dependencies]
# CLI Argument parsing
clap = { version = "4.4", features = ["derive"] }

# Environment & Path handling
walkdir = "2.4"
fs_extra = "1.3"
anyhow = "1.0"

# Configuration parsing
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }

# Archive & Compression
tar = "0.4"
flate2 = "1.0"

# Utilities
chrono = "0.4"
dialoguer = "0.11"
edit-xml = "0.1"
sysinfo = "0.30"

[features]
default = []
web = ["reqwest"]

[dev-dependencies]
tempfile = "3.8"
